--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
         <div class="col s12">
-              <div class="card" style="margin: 30px auto;">
+            <div class="card" style="margin: 30px auto;">
                 <!-- Card Content -->
                 <div class="card-content">
                     <!-- Text form for USER entering Burger -->
@@ -18,41 +18,37 @@
                 </div>
                 <!-- Card TABS -->
                 <div class="card-tabs">
-                      <ul class="tabs tabs-fixed-width">
-                            <li class="tab"><a class="active" href="#unEaten">Burgers Ready!</a></li>
-                            <li class="tab"><a  href="#devoured">Devoured..</a></li>
-                      </ul>
+                    <ul class="tabs tabs-fixed-width">
+                        <li class="tab"><a class="active" href="#unEaten">Burgers Ready!</a></li>
+                        <li class="tab"><a href="#devoured">Devoured..</a></li>
+                    </ul>
                 </div>
                 <!-- card TABS content -->
-                    <div class="card-content grey lighten-4">
-                          <div id="unEaten">
-                                <ul class="row">
-                                    {{#each burgers}}
-                                        {{#unless this.devoured}}
-                                            <li class="col s12 m6">
-                                                <p>{{this.burger_name}}</p>
-                                                <form action="/{{this.id}}?_method=PUT" method="POST">
-                                                    <input type="hidden" name="devoured" value="1">
-                                                    <button class="btn waves-effect waves-light brown lighten-1" type="submit">Devour!</button>
-                                                </form>
-                                            </li>
-                                        {{/unless}}
-                                    {{/each}}
-                                </ul>
-                          </div>
-                          <div id="devoured">
-                                <ul class="row">
-                                    {{#each burgers}}
-                                        {{#if this.devoured}}
-                                            <li class="col s12 m6">
-                                                <p>{{this.burger_name}}</p>
-                                            </li>
-                                        {{/if}}
-                                    {{/each}}
-                                </ul>
-                          </div>
+                <div class="card-content grey lighten-4">
+                    <div id="unEaten">
+                        <ul class="row">
+                            {{#each burgers}} {{#unless this.devoured}}
+                            <li class="col s12 m6">
+                                <p>{{this.burger_name}}</p>
+                                <form action="/{{this.id}}?_method=PUT" method="POST">
+                                    <input type="hidden" name="devoured" value="1">
+                                    <button class="btn waves-effect waves-light brown lighten-1" type="submit">Devour!</button>
+                                </form>
+                            </li>
+                            {{/unless}} {{/each}}
+                        </ul>
                     </div>
-              </div>
+                    <div id="devoured">
+                        <ul class="row">
+                            {{#each burgers}} {{#if this.devoured}}
+                            <li class="col s12 m6">
+                                <p>{{this.burger_name}}</p>
+                            </li>
+                            {{/if}} {{/each}}
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
